--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
 
+
 h1 {
   font-size: 2.7em !important;
   line-height: 150% !important;
@@ -84,4 +85,9 @@ select{
 
 .app-header{
   position: absolute !important;
+}
+
+.container{
+  max-width: 100% !important;
+  width: 100% !important;
 }
