--- a/style.css
+++ b/style.css
@@ -11,44 +11,44 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 @font-face {
   font-family: 'Spectral';
-  src: url('fonts/Spectral-Regular.eot');
-  src: url('fonts/Spectral-Regular.eot?#iefix') format('embedded-opentype'),
-      url('fonts/Spectral-Regular.woff2') format('woff2'),
-      url('fonts/Spectral-Regular.woff') format('woff'),
-      url('fonts/Spectral-Regular.ttf') format('truetype');
+  src: url('https://brandspa.com/wp-content/themes/brandspa/fonts/Spectral-Regular.eot');
+  src: url('https://brandspa.com/wp-content/themes/brandspa/fonts/Spectral-Regular.eot?#iefix') format('embedded-opentype'),
+      url('https://brandspa.com/wp-content/themes/brandspa/fonts/Spectral-Regular.woff2') format('woff2'),
+      url('https://brandspa.com/wp-content/themes/brandspa/fonts/Spectral-Regular.woff') format('woff'),
+      url('https://brandspa.com/wp-content/themes/brandspa/fonts/Spectral-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Spectral';
-  src: url('fonts/Spectral-ExtraBold.eot');
-  src: url('fonts/Spectral-ExtraBold.eot?#iefix') format('embedded-opentype'),
-      url('fonts/Spectral-ExtraBold.woff2') format('woff2'),
-      url('fonts/Spectral-ExtraBold.woff') format('woff'),
-      url('fonts/Spectral-ExtraBold.ttf') format('truetype');
+  font-family: 'SpectralBold';
+  src: url('https://brandspa.com/wp-content/themes/brandspa/fonts/Spectral-ExtraBold.eot');
+  src: url('https://brandspa.com/wp-content/themes/brandspa/fonts/Spectral-ExtraBold.eot?#iefix') format('embedded-opentype'),
+      url('https://brandspa.com/wp-content/themes/brandspa/fonts/Spectral-ExtraBold.woff2') format('woff2'),
+      url('https://brandspa.com/wp-content/themes/brandspa/fonts/Spectral-ExtraBold.woff') format('woff'),
+      url('https://brandspa.com/wp-content/themes/brandspa/fonts/Spectral-ExtraBold.ttf') format('truetype');
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Aktiv Grotesk';
-  src: url('fonts/AktivGrotesk-Bold.eot');
-  src: url('fonts/AktivGrotesk-Bold.eot?#iefix') format('embedded-opentype'),
-      url('fonts/AktivGrotesk-Bold.woff2') format('woff2'),
-      url('fonts/AktivGrotesk-Bold.woff') format('woff'),
-      url('fonts/AktivGrotesk-Bold.ttf') format('truetype');
+  font-family: 'Aktiv Grotesk Bold';
+  src: url('https://brandspa.com/wp-content/themes/brandspa/fonts/AktivGrotesk-Bold.eot');
+  src: url('https://brandspa.com/wp-content/themes/brandspa/fonts/AktivGrotesk-Bold.eot?#iefix') format('embedded-opentype'),
+      url('https://brandspa.com/wp-content/themes/brandspa/fonts/AktivGrotesk-Bold.woff2') format('woff2'),
+      url('https://brandspa.com/wp-content/themes/brandspa/fonts/AktivGrotesk-Bold.woff') format('woff'),
+      url('https://brandspa.com/wp-content/themes/brandspa/fonts/AktivGrotesk-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Aktiv Grotesk';
-  src: url('fonts/AktivGrotesk-Regular.eot');
-  src: url('fonts/AktivGrotesk-Regular.eot?#iefix') format('embedded-opentype'),
-      url('fonts/AktivGrotesk-Regular.woff2') format('woff2'),
-      url('fonts/AktivGrotesk-Regular.woff') format('woff'),
-      url('fonts/AktivGrotesk-Regular.ttf') format('truetype');
+  src: url('https://brandspa.com/wp-content/themes/brandspa/fonts/AktivGrotesk-Regular.eot');
+  src: url('https://brandspa.com/wp-content/themes/brandspa/fonts/AktivGrotesk-Regular.eot?#iefix') format('embedded-opentype'),
+      url('https://brandspa.com/wp-content/themes/brandspa/fonts/AktivGrotesk-Regular.woff2') format('woff2'),
+      url('https://brandspa.com/wp-content/themes/brandspa/fonts/AktivGrotesk-Regular.woff') format('woff'),
+      url('https://brandspa.com/wp-content/themes/brandspa/fonts/AktivGrotesk-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
