--- a/shortcodes/custom/css/fullpageproject.css
+++ b/shortcodes/custom/css/fullpageproject.css
@@ -4,6 +4,7 @@
     background-repeat: no-repeat !important;
     background-size: cover !important;
     background-position: left top !important; 
+    font-family: 'Aktiv Grotesk', Arial, Helvetica, sans-serif;
 }
 
 .fullpage:before {
@@ -38,6 +39,7 @@
     color: #FFF;
     text-decoration: none;
     font-size: 14px;
+    font-weight: bold;
 }
 .fullpage .logo img{
     max-width: 100%;
