--- a/shortcodes/custom/css/slider.css
+++ b/shortcodes/custom/css/slider.css
@@ -26,7 +26,7 @@
 }
 
 .slide-text{
-    font-size: 4.2rem !important;
+    font-size: 6.2rem !important;
     line-height: 1 !important;
     font-family: 'Spectral Bold', Arial, Helvetica, sans-serif !important;
 }
@@ -138,6 +138,10 @@
 }
 
 @media screen and (min-width: 720px) {
+
+    .slide-text{
+        font-size: 2.7rem !important;
+    }
     .slide-footer{
         display: block;
     }
