--- a/shortcodes/custom/css/fullpageproject.css
+++ b/shortcodes/custom/css/fullpageproject.css
@@ -23,6 +23,7 @@
 }
 
 .fullpage .project-info .project-category{
+    font-family: 'Spectral', Arial, Helvetica, sans-serif;
     text-transform: uppercase;
     font-size: 12px;
 }
